--- a/src/app/pages/spot-detail/spot-detail.component.scss
+++ b/src/app/pages/spot-detail/spot-detail.component.scss
@@ -371,23 +371,11 @@ p{
 }
 
 .thumbmain {
-  display: inline-flex !important;
-  padding: 0 16px;
   width: 100%;
+  height: 62.6vw;
+  overflow: hidden;
 
-  > img {
-    height: 60vw;
-    object-fit: cover;
-    @include copy-protect;
-  }
-}
-
-.thumbnail {
-  display: inline-flex !important;
-  height: 12vh;
-  padding: 4px;
-
-  > img {
+  img {
     width: 100%;
     height: 100%;
     object-fit: cover;
@@ -395,13 +383,26 @@ p{
   }
 }
 
-.content {
-  padding: 4px;
+// .thumbnail {
+//   display: inline-flex !important;
+//   height: 12vh;
+//   padding: 4px;
 
-  > p {
-    line-height: 1.5;
-  }
-}
+//   > img {
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+//     @include copy-protect;
+//   }
+// }
+
+// .content {
+//   padding: 4px;
+
+//   > p {
+//     line-height: 1.5;
+//   }
+// }
 
 ::ng-deep .mat-card {
   box-shadow: none !important;
