--- a/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
+++ b/src/app/pages/planspot/components/planspot-selector/planspot-selector.component.html
@@ -55,7 +55,8 @@
         <span>{{searchTarms?.cate}}</span>
       </button>
       <button class="popupItem reset" (click)="condReset()">
-        <img src="../../../../../assets/img/pop_reset.svg" alt="">
+        <!-- <img src="../../../../../assets/img/pop_reset.svg" alt=""> -->
+        <mat-icon aria-hidden="false" style="color: #a7a7a7;">delete_forever</mat-icon>
       </button>
     </div>
   </mat-card-content>
@@ -72,7 +73,8 @@
         <span>{{searchTarms?.cate}}</span>
       </button>
       <button class="popupItem reset" (click)="condReset()">
-        <img src="../../../../../assets/img/pop_reset.svg" alt="">
+        <!-- <img src="../../../../../assets/img/pop_reset.svg" alt=""> -->
+        <mat-icon aria-hidden="false" style="color: #a7a7a7;">delete_forever</mat-icon>
       </button>
     </div>
   </div>
