--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -25,6 +25,14 @@ infinite-scroll
       （これらのスポットもプランに入れることができます。）
     </mat-card-content>
   </mat-card>
+  <mat-card id="nolist" *ngIf="!isList && condition.select==='user'">
+    <mat-card-content>
+      <!-- みんなのおすすめは、見つかりませんでした。<br>
+      代わりにGoogle検索でスポットを検索できます。<br>
+      （上のgoogleを選択して検索してください。） -->
+      ユーザープラン
+    </mat-card-content>
+  </mat-card>
   <ng-content>
   </ng-content>
 </div>
