--- a/src/app/parts/user-plan-list/user-plan-list.component.html
+++ b/src/app/parts/user-plan-list/user-plan-list.component.html
@@ -8,15 +8,8 @@
 <h4>私がおすすめの旅プラン</h4>
 
 <div class='rows'>
-  <div class="box"
-    infinite-scroll
-    [infiniteScrollDistance]="5"
-    [infiniteScrollUpDistance]="1.5"
-    [infiniteScrollThrottle]="150"
-    (scrolled)="onScrollDown()">
-    <app-planspot-list-item *ngFor="let item of rows" [item]="item" [lang]="lang">
-    </app-planspot-list-item>
-  </div>
+  <app-planspot-list-item *ngFor="let item of data.rows" [item]="item" [lang]="lang">
+  </app-planspot-list-item>
 </div>
 
 
