--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -1,11 +1,12 @@
-<app-planspot-selector id="psheader" 
-  [count]="count" 
-  [condition]="condition" 
-  [mSort]="$mSort" 
+<app-planspot-selector id="psheader"
+  [count]="count"
+  [condition]="condition"
+  [mSort]="$mSort"
   [searchTarms]="optionKeywords"
-  (event)="onPlanSpotChange($event)" 
-  (sort)="sortChange($event)" 
-  (keyword)="keywordSearch($event)" 
+  [googleSearchArea]="googleSearchArea"
+  (event)="onPlanSpotChange($event)"
+  (sort)="sortChange($event)"
+  (keyword)="keywordSearch($event)"
   (open)="openDialog($event)"
   (reset)="conditionReset()">
 </app-planspot-selector>
