--- a/src/app/parts/user-plan-list/user-plan-list.component.html
+++ b/src/app/parts/user-plan-list/user-plan-list.component.html
@@ -8,7 +8,7 @@
 <h4>私がおすすめの旅プラン</h4>
 
 <div class='rows'>
-  <app-planspot-list-item *ngFor="let item of data.rows" [item]="item" [lang]="lang">
+  <app-planspot-list-item *ngFor="let item of data.rows" [item]="item" [lang]="lang" (addMyPlan)="addMyPlan($event)">
   </app-planspot-list-item>
 </div>
 
