--- a/src/app/parts/user-plan-list/user-plan-list.component.html
+++ b/src/app/parts/user-plan-list/user-plan-list.component.html
@@ -1,5 +1,5 @@
-<div class='header'>
-  <button mat-icon-button (click)="onClose()"><mat-icon>arrow_back</mat-icon></button>
+<div class='listheader'>
+  <button mat-icon-button (click)="onClose()"><mat-icon>arrow_back</mat-icon>戻る</button>
   <span>{{data.user.displayName}}さんの投稿一覧</span>
 </div>
 <!-- user-profile -->
@@ -7,8 +7,14 @@
 
 <h4>私がおすすめの旅プラン</h4>
 
+<dl class='category' *ngIf="data.rows.searchCategories.length>0">
+  <dd *ngFor="let item of data.rows.searchCategories">
+    {{ item | langFilter:lang}}
+  </dd>
+</dl>
+
 <div class='rows'>
-  <app-planspot-list-item *ngFor="let item of data.rows" [item]="item" [lang]="lang" (addMyPlan)="addMyPlan($event)">
+  <app-planspot-list-item *ngFor="let item of data.rows.userPlans" [item]="item" [lang]="lang" (addMyPlan)="addMyPlan($event)" (setFav)="setFavorite($event)">
   </app-planspot-list-item>
 </div>
 
