--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -1,5 +1,6 @@
 <div class="plandtl">
   <mat-card id="plandtlheader" [ngClass]="{'onplan':match(planSpotids,myPlanSpots)}">
+    <div class='link' (click)="linktolist()">{{"BackEveryoneRecommendations" | translate}}</div>
     <mat-card-header>
       <div class='header'>
         <div class="lt">
