--- a/src/app/pages/top/top.component.html
+++ b/src/app/pages/top/top.component.html
@@ -28,7 +28,7 @@
       </div>
       
       <div class="inputWrapper">
-        <div class='title'>{{"FindEveryoneRecommendations" | translate}}</div>
+        <div class='title' (click)="linktolist()">{{"FindEveryoneRecommendations" | translate}}</div>
         <input type="text" 
         placeholder="「京都女子旅」「スカイツリー」..." 
         class="keyword"
