--- a/src/app/parts/user-plan-list/user-plan-list.component.scss
+++ b/src/app/parts/user-plan-list/user-plan-list.component.scss
@@ -16,6 +16,7 @@
     background-color: #fff;
     button{
       position: absolute;
+      width: 60px;
       left: 0;
       span{
         display: flex;
