--- a/src/app/pages/plan-detail/plan-detail.component.scss
+++ b/src/app/pages/plan-detail/plan-detail.component.scss
@@ -978,7 +978,7 @@ div.plandtl{
     .addToPlan{
       margin: 8px 16px;
       display: flex;
-      justify-content: end;
+      justify-content: flex-end;
       button{
         all:unset;
         width: 181px;
