--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -4,7 +4,7 @@
       {{ "MakeMyPlan" | translate }}
     </div>
     <div class="switchView" [ngClass]="{'en':lang==='en'}">
-      <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="!isEdit" [disabled]="!row">
+      <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
       <label for="switch-view"><span></span></label>
       <div id="swImg"></div>
     </div>
@@ -191,7 +191,7 @@
         <div *ngFor="let item of row.planSpots ?? spotZero; index as i;trackBy: myTrackBy" cdkDrag
           (cdkDragMoved)="setStep(999)">
           <mat-accordion #mepSpot="matAccordion" multi>
-            <mat-expansion-panel [expanded]="step === i" (opened)="setStep(i)" #mepSpot{{i}} class="transfer" hideToggle>
+            <mat-expansion-panel [expanded]="step === i" (opened)="setStep(i)" #mepSpot{{i}} class="transfer" hideToggle [ngClass]="{'zero':!row.planSpots}">
               <mat-expansion-panel-header
                 [@.disabled]="true"
               >
@@ -228,69 +228,71 @@
                 </dl>
               </mat-expansion-panel-header>
               <!-- panel body -->
-              <mat-form-field hintLabel="{{ 'Required' | translate }}" appearance="outline">
-                <textarea
-                  matInput
-                  #spotName
-                  name="spotName{{i}}"
-                  maxlength="30"
-                  placeholder="{{ 'SpotNameEx' | translate }}"
-                  required
-                  #inputinfo="ngModel"
-                  [(ngModel)]="item.spotName"
-                  (change)="onChange(false)"></textarea>
-                  <mat-hint align="end">{{spotName.value?.length || 0}}/30{{ "Characters" | translate }}</mat-hint>
-              </mat-form-field>
-              <!-- 写真 -->
-              <div class='select'>
-                <div class="fileselector">
-                  {{ "MyplanSelectPhoto" | translate }}
-                  <input
-                  type="file"
-                  multiple="multiple"
-                  name="selectPhoto{{i}}"
-                  accept="image/*"
-                  (change)="onClickSelectPhotoSpot($event, item)" />
+              <div class='panel-content'>
+                <mat-form-field  hintLabel="{{ 'Required' | translate }}" appearance="outline">
+                  <textarea
+                    matInput
+                    #spotName
+                    name="spotName{{i}}"
+                    maxlength="30"
+                    placeholder="{{ 'SpotNameEx' | translate }}"
+                    required
+                    #inputinfo="ngModel"
+                    [(ngModel)]="item.spotName"
+                    (change)="onChange(false)"></textarea>
+                    <mat-hint align="end">{{spotName.value?.length || 0}}/30{{ "Characters" | translate }}</mat-hint>
+                </mat-form-field>
+                <!-- 写真 -->
+                <div class='select'>
+                  <div class="fileselector">
+                    {{ "MyplanSelectPhoto" | translate }}
+                    <input
+                    type="file"
+                    multiple="multiple"
+                    name="selectPhoto{{i}}"
+                    accept="image/*"
+                    (change)="onClickSelectPhotoSpot($event, item)" />
+                  </div>
+                  <label>{{"Selectimagespot"|translate}}</label>
                 </div>
-                <label>{{"Selectimagespot"|translate}}</label>
-              </div>
-
-              <div *ngFor="let picture of item.planUserpictures; index as j;trackBy: myTrackBy" class="picpreview">
-                <img width="100%" height="100%" [src]="picture.imageCropped ?? picture.picturePreviewUrl ?? picture.picture_url" />
-                <button type="button" class="delete" (click)="onClickPhotoDeleteSpot(item, picture)"></button>
-                <button *ngIf="picture.pictureFile" type="button" class="crop" (click)="onClickCropSpot(item, picture)">{{"Edit"|translate}}</button>
-              </div>
-
-              <!-- スポット概要 -->
-              <mat-form-field appearance="outline">
-                <textarea
-                  matInput
-                  #memo
-                  name="memo{{i}}"
-                  rows="5"
-                  placeholder="{{ 'SpotExplanationEx' | translate }}"
-                  #inputinfo="ngModel"
-                  rows="5"
-                  [(ngModel)]="item.memo"
-                  (change)="onChange(false)">
-                </textarea>
-                <mat-hint align="end">{{memo.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
-                <mat-hint align="start"><a href="javascript:void(0);" (click)="item.memo='';">{{"labelClear" | translate}}</a></mat-hint>
-              </mat-form-field>
-
-              <!-- 滞在時間 -->
-              <div class="selectStay">
-                <label>{{ "SuggestedTime" | translate }}</label>
-                <div class="stayTime">
-                  <select name="stayTime{{i}}" [(ngModel)]="item.stayTime" (change)="onChange(true)">
-                    <option *ngFor="let sTime of $stayTime" [value]="sTime.id">
-                      {{ sTime.id }}{{ "Minute" | translate }}
-                    </option>
-                  </select>
+  
+                <div *ngFor="let picture of item.planUserpictures; index as j;trackBy: myTrackBy" class="picpreview">
+                  <img width="100%" height="100%" [src]="picture.imageCropped ?? picture.picturePreviewUrl ?? picture.picture_url" />
+                  <button type="button" class="delete" (click)="onClickPhotoDeleteSpot(item, picture)"></button>
+                  <button *ngIf="picture.pictureFile" type="button" class="crop" (click)="onClickCropSpot(item, picture)">{{"Edit"|translate}}</button>
                 </div>
-              </div>
-              <div class='close'>
-                <button (click)="setStep(999)">{{"Close"|translate}}</button>
+  
+                <!-- スポット概要 -->
+                <mat-form-field appearance="outline">
+                  <textarea
+                    matInput
+                    #memo
+                    name="memo{{i}}"
+                    rows="5"
+                    placeholder="{{ 'SpotExplanationEx' | translate }}"
+                    #inputinfo="ngModel"
+                    rows="5"
+                    [(ngModel)]="item.memo"
+                    (change)="onChange(false)">
+                  </textarea>
+                  <mat-hint align="end">{{memo.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
+                  <mat-hint align="start"><a href="javascript:void(0);" (click)="item.memo='';">{{"labelClear" | translate}}</a></mat-hint>
+                </mat-form-field>
+  
+                <!-- 滞在時間 -->
+                <div class="selectStay">
+                  <label>{{ "SuggestedTime" | translate }}</label>
+                  <div class="stayTime">
+                    <select name="stayTime{{i}}" [(ngModel)]="item.stayTime" (change)="onChange(true)">
+                      <option *ngFor="let sTime of $stayTime" [value]="sTime.id">
+                        {{ sTime.id }}{{ "Minute" | translate }}
+                      </option>
+                    </select>
+                  </div>
+                </div>
+                <div class='close'>
+                  <button (click)="setStep(999)">{{"Close"|translate}}</button>
+                </div>
               </div>
             </mat-expansion-panel>
           </mat-accordion>
@@ -345,7 +347,7 @@
       <div class="bottom">
         <div></div>
         <div class="switchView" [ngClass]="{'en':lang==='en'}">
-          <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="!isEdit" [disabled]="!row">
+          <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
           <label for="switch-view"><span></span></label>
           <div id="swImg"></div>
         </div>
@@ -550,7 +552,7 @@
     <div class="bottom prev">
       <div></div>
       <div class="switchView" [ngClass]="{'en':lang==='en'}">
-        <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="!isEdit" [disabled]="!row">
+        <input type="checkbox" id="switch-view" (click)="onClickEdit()" [checked]="isEdit" [disabled]="!row">
         <label for="switch-view"><span></span></label>
         <div id="swImg"></div>
       </div>
