--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -712,7 +712,7 @@
       left: 0; top: 0;
       width: 100%; height: 100%;
       background: rgba(100, 100, 100, .9);
-      z-index: 2147483647;
+      z-index: 18;
       display: flex;
       align-items: center;
       justify-content: center;
