--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -22,7 +22,7 @@
         </span>
 
         <div class='guide'>
-          旅プランを作ろう！
+          どこに行く？
         </div>
       </mat-toolbar-row>
     </mat-toolbar>
