--- a/src/app/pages/plan-detail/plan-detail.component.html
+++ b/src/app/pages/plan-detail/plan-detail.component.html
@@ -24,7 +24,8 @@
               <img src="../../../assets/img/hart_small.svg">
             </button>
             <button mat-icon-button class="plan_add" (click)="onClickAddToPlan()">
-              <img src="{{addplanbtn_src}}" alt="add to plan">
+              <!-- <img src="{{addplanbtn_src}}" alt="add to plan"> -->
+              {{'AddToPlan'| translate}}
             </button>
           </div>
         </div>
