--- a/src/app/pages/spot-detail/spot-detail.component.html
+++ b/src/app/pages/spot-detail/spot-detail.component.html
@@ -26,7 +26,7 @@
               <img src="../../../assets/img/hart_small.svg" alt="">
             </button>
             <button mat-icon-button class="plan_add" (click)="onClickAddToPlan()">
-              {{'AddToPlan'| translate}}
+              <img src="{{addplanbtn_src}}" alt="add to plan">
             </button>
           </div>
         </div>
