--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -260,7 +260,9 @@
                   <img width="100%" height="100%" [src]="picture.imageCropped ?? picture.picturePreviewUrl ?? picture.picture_url" />
                   <button type="button" class="delete" (click)="onClickPhotoDeleteSpot(item, picture)"></button>
                   <button *ngIf="picture.pictureFile" type="button" class="crop" (click)="onClickCropSpot(item, picture)">{{"Edit"|translate}}</button>
-                  <div *ngIf="item.planUserpictures.length > j + 1" (click)="onClickSpotPicture(picture)">上下画像入れ替え</div>
+                  <button class="swapbtn" *ngIf="item.planUserpictures.length > j + 1" (click)="onClickSpotPicture(picture)">
+                    <img src="../../../assets/img/icon_changepic.svg" alt="swip">
+                  </button>
                 </div>
 
                 <!-- スポット概要 -->
@@ -367,7 +369,8 @@
               <span class="planName">{{ row.planName }}</span>
             </ng-container>
             <ng-template #noplan>
-              <a href="javascript:void(0)" (click)="onClickEdit()"><mat-icon>arrow_back</mat-icon>{{"ErrorMsgRequiredPlanName"|translate}}</a>
+              <a href="javascript:void(0)" (click)="onClickEdit()">{{"ErrorMsgRequiredPlanName"|translate}}
+              </a>
             </ng-template>
           </div>
           <div class="rt">
