--- a/src/app/pages/myplan/myplan.component.scss
+++ b/src/app/pages/myplan/myplan.component.scss
@@ -62,6 +62,7 @@
           font-weight: bold;
           text-align: center;
           line-height: 1.1;
+          white-space: nowrap;
 
           &.color-brown {
             color: #bfa060;
