--- a/src/app/pages/myplan/myplan.component.html
+++ b/src/app/pages/myplan/myplan.component.html
@@ -89,7 +89,7 @@
                 [(ngModel)]="row.planExplanation"
                 (change)="onChange(false)"></textarea>
                 <mat-hint align="end">{{planExplanation.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
-                <mat-hint align="start"><a href="javascript:void(0);" (click)="row.planExplanation='';">{{"labelClear" | translate}}</a></mat-hint>
+                <mat-hint><a href="javascript:void(0);" (click)="row.planExplanation='';">{{"labelClear" | translate}}</a></mat-hint>
             </mat-form-field>
             <!-- フリー文章 -->
             <mat-form-field appearance="outline">
@@ -103,7 +103,7 @@
                 [(ngModel)]="row.memo"
                 (change)="onChange(false)"></textarea>
                 <mat-hint align="end">{{memo.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
-                <mat-hint align="start"><a href="javascript:void(0);" (click)="row.memo='';">{{"labelClear" | translate}}</a></mat-hint>
+                <mat-hint><a href="javascript:void(0);" (click)="row.memo='';">{{"labelClear" | translate}}</a></mat-hint>
             </mat-form-field>
             <!-- カテゴリー選択ボタン -->
             <button mat-stroked-button (click)="onClickAreaCategory()">
@@ -279,7 +279,7 @@
                     (change)="onChange(false)">
                   </textarea>
                   <mat-hint align="end">{{memo.value?.length || 0}}{{ "Characters" | translate }}</mat-hint>
-                  <mat-hint align="start"><a href="javascript:void(0);" (click)="item.memo='';">{{"labelClear" | translate}}</a></mat-hint>
+                  <mat-hint><a href="javascript:void(0);" (click)="item.memo='';">{{"labelClear" | translate}}</a></mat-hint>
                 </mat-form-field>
 
                 <!-- 滞在時間 -->
