--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
@@ -1,3 +1,20 @@
+<div class='header'>
+  <div class='row'>
+    <div class='title'>{{"UserProfile"|translate}}</div>
+    <button type="button" class="edit" (click)="onClickPreviewSwitch()">
+      <ng-container *ngIf="isPreview; else isEdit">
+        {{"isEdit"|translate}}
+      </ng-container>
+      <ng-template #isEdit>
+        {{"Preview"|translate}}
+      </ng-template>
+    </button>
+  </div>
+  <div class='label'>
+    {{"EditUserProfileTitle"|translate}}
+  </div>
+</div>
+
 <form [formGroup]="myForm" (ngSubmit)="onClickUpdate()" id="uprof">
   <ng-container *ngIf="data && !isPreview">
     <mat-card>
@@ -112,89 +129,105 @@
         </mat-list>
       </mat-card-content>
     </mat-card>
-
-    <!-- 非公開情報 -->
-    <mat-card>
-      <mat-card-header>
-        <h4>{{ "PrivateInformation" | translate }}</h4>
-      </mat-card-header>
-      <mat-card-content>
-        <mat-list>
-          <!-- メールアドレス -->
-          <mat-list-item>
-            <mat-form-field appearance="outline">
-              <mat-label>{{ "EMail" | translate }}</mat-label>
-              <input
-              matInput
-              formControlName="email"
-              />
-            </mat-form-field>
-          </mat-list-item>
-          <!-- パスワード -->
-          <mat-list-item class="pw">
-            <mat-form-field appearance="outline">
-              <mat-label>{{ "Password" | translate }}</mat-label>
-              <input
-              matInput
-              formControlName="password"
-              />
-            </mat-form-field>
-            <button type="button" mat-button class="pwchange" (click)="onClickChangePassword()">
-              {{ "ChangePassword" | translate }}
-            </button>
-          </mat-list-item>
-          <!-- 姓 -->
-          <mat-list-item>
-            <mat-form-field appearance="outline">
-              <mat-label>{{ "Surname" | translate }}</mat-label>
-              <input
-                matInput
-                #surname
-                maxlength="20"
-                formControlName="surname"
-              />
-              <mat-hint align="end">{{surname.value?.length || 0}}/20{{ "Characters" | translate }}</mat-hint>
-            </mat-form-field>
-          </mat-list-item>
-          <!-- 名 -->
-          <mat-list-item>
-            <mat-form-field appearance="outline">
-              <mat-label>{{ "GivenName" | translate }}</mat-label>
-              <input
-                matInput
-                #givenName
-                maxlength="20"
-                formControlName="givenName"
-              />
-              <mat-hint align="end">{{givenName.value?.length || 0}}/20{{ "Characters" | translate }}</mat-hint>
-            </mat-form-field>
-          </mat-list-item>
-          <!-- 生年月日 -->
-          <mat-list-item class="birthday">
-            <mat-form-field hintLabel="{{ 'Required' | translate }}" appearance="outline">
-              <mat-label>{{ "Birthday" | translate }}</mat-label>
-              <input
-                matInput
-                [matDatepicker]="picker"
-                name="birthday"
-                formControlName="birthday"
-              />
-              <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-              <mat-datepicker #picker></mat-datepicker>
-            </mat-form-field>
-          </mat-list-item>
-          <mat-list-item class="bottom">
-            <button type="submit" class="save"
-              mat-button
-            >
-              {{ "Registration" | translate }}
-            </button>
-          </mat-list-item>
-        </mat-list>
-      </mat-card-content>
-    </mat-card>
   </ng-container>
+  
   <mat-card>
     <app-userprofile-panel *ngIf="data && isPreview" [user]="data" [country]="countryAll" [edit]="isPreview" (event)="onClickPreviewSwitch()"></app-userprofile-panel>
   </mat-card>
+
+  <!-- 非公開情報 -->
+  <mat-card class="private">
+    <mat-card-header>
+      <div class='label'>{{ "PrivateInformation" | translate }}</div>
+    </mat-card-header>
+    <mat-card-content>
+      <mat-list>
+        <!-- メールアドレス -->
+        <mat-list-item>
+          <mat-form-field appearance="outline">
+            <mat-label>{{ "EMail" | translate }}</mat-label>
+            <input
+            matInput
+            formControlName="email"
+            />
+          </mat-form-field>
+        </mat-list-item>
+        <!-- パスワード -->
+        <mat-list-item class="pw">
+          <mat-form-field appearance="outline">
+            <mat-label>{{ "Password" | translate }}</mat-label>
+            <input
+            matInput
+            formControlName="password"
+            />
+          </mat-form-field>
+          <button type="button" mat-button class="pwchange" (click)="onClickChangePassword()">
+            {{ "ChangePassword" | translate }}
+          </button>
+        </mat-list-item>
+        <!-- 姓 -->
+        <mat-list-item>
+          <mat-form-field appearance="outline">
+            <mat-label>{{ "Surname" | translate }}</mat-label>
+            <input
+              matInput
+              #surname
+              maxlength="20"
+              formControlName="surname"
+            />
+            <mat-hint align="end">{{surname.value?.length || 0}}/20{{ "Characters" | translate }}</mat-hint>
+          </mat-form-field>
+        </mat-list-item>
+        <!-- 名 -->
+        <mat-list-item>
+          <mat-form-field appearance="outline">
+            <mat-label>{{ "GivenName" | translate }}</mat-label>
+            <input
+              matInput
+              #givenName
+              maxlength="20"
+              formControlName="givenName"
+            />
+            <mat-hint align="end">{{givenName.value?.length || 0}}/20{{ "Characters" | translate }}</mat-hint>
+          </mat-form-field>
+        </mat-list-item>
+        <!-- 生年月日 -->
+        <mat-list-item class="birthday">
+          <mat-form-field hintLabel="{{ 'Required' | translate }}" appearance="outline">
+            <mat-label>{{ "Birthday" | translate }}</mat-label>
+            <input
+              matInput
+              [matDatepicker]="picker"
+              name="birthday"
+              formControlName="birthday"
+            />
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+            <mat-hint style="color: red;">&emsp;年代は公表されます</mat-hint>
+          </mat-form-field>
+        </mat-list-item>
+        <mat-list-item class="bottom" *ngIf="!isPreview">
+          <button type="submit" class="save"
+            mat-button
+          >
+            {{ "Registration" | translate }}
+          </button>
+        </mat-list-item>
+      </mat-list>
+      <div class='overray' *ngIf="isPreview"></div>
+    </mat-card-content>
+  </mat-card>
+
+  <div class='footer'>
+    <div class='row'>
+      <button type="button" class="edit" (click)="onClickPreviewSwitch()">
+        <ng-container *ngIf="isPreview; else isEdit">
+        {{"isEdit"|translate}}
+      </ng-container>
+      <ng-template #isEdit>
+        {{"Preview"|translate}}
+      </ng-template>
+      </button>
+    </div>
+  </div>
 </form>
