--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.scss
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.scss
@@ -283,6 +283,14 @@
                   padding-top: 10px;
                   line-height: 1.7;
                 }
+
+                .hint-end{
+                  font-size: 10px;
+                  position: absolute;
+                  top: 29px;
+                  left: 40px;
+                  color: red;
+                }
               }
               
             }
