--- a/src/app/pages/planspot/planspot.component.html
+++ b/src/app/pages/planspot/planspot.component.html
@@ -10,7 +10,7 @@
   (open)="openDialog($event)"
   (reset)="conditionReset()">
 </app-planspot-selector>
-<app-planspot-list (scrolled)="onScrollDown()" [isList]="isList" [condition]="condition">
+<app-planspot-list (scrolled)="onScrollDown()" (glink)="onPlanSpotChange($event)" [isList]="isList" [condition]="condition">
   <app-planspot-list-item
     *ngFor="let item of details$"
     [item]="item"
