--- a/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
+++ b/src/app/pages/mypage-userprofile/mypage-userprofile.component.html
@@ -203,7 +203,8 @@
             />
             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
             <mat-datepicker #picker></mat-datepicker>
-            <mat-hint style="color: red;">&emsp;年代は公表されます</mat-hint>
+            <!-- <mat-hint style="color: red;">&emsp;年代は公表されます</mat-hint> -->
+            <div class='hint-end'>年代は公表されます</div>
           </mat-form-field>
         </mat-list-item>
         <mat-list-item class="bottom" *ngIf="!isPreview">
