--- a/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
+++ b/src/app/pages/planspot/components/planspot-list/planspot-list.component.html
@@ -14,8 +14,7 @@ infinite-scroll
   <mat-card id="nolist" *ngIf="!isList && condition.select!=='google'">
     <mat-card-content>
       みんなのおすすめは、見つかりませんでした。<br>
-      代わりにGoogle検索でスポットを検索できます。<br>
-      （上のgoogleを選択して検索してください。）
+      代わりに<a href="javascript:void(0);" class="glink" (click)="googleLink('google')">Google検索</a>でスポットを検索できます。
     </mat-card-content>
   </mat-card>
   <mat-card id="nolist" *ngIf="!isList && condition.select==='google'">
